# water-simulation

./: CMakeLists.txt  Environment.cpp  Environment.hpp  Info.cpp  Info.hpp  README.md  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Solver.cpp  Solver.hpp  Sphere.cpp  Sphere.hpp  View.cpp  View.hpp  main.cpp
shaders/: FramebufferFragmentShader.txt  FramebufferGeometryShader.txt  FramebufferVertexShader.txt  borderFragmentShader.txt  borderGeometryShader.txt  borderVertexShader.txt  lightFragmentShader.txt  lightGeometryShader.txt  lightVertexShader.txt  sphereFragmentShader.txt  sphereGeometryShader.txt  sphereVertexShader.txt  surfaceFragmentShader.txt  surfaceGeometryShader.txt  surfaceVertexShader.txt
